Revert "fix color contrast"
This reverts commit f87505b889e3ea077d1bd7a325d3806997b91542.

--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,7 @@ header {
     color: #282828;
 }
 .nav > li > a:hover {
-    color: #933E10;
+    color: #ec8339;
 }
 main {
     padding-top: 99px;
